Read more post alignment fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -330,7 +330,7 @@ input, textarea, select, .uneditable-input {
 	color: #81a29e;
 	cursor: pointer;
 	text-align: center;
-	margin-bottom: 5px;
+	margin: 8px 0 4px 0;
 }
 
 .timestamp {
